fully fleshed out month view with support for large ranges

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <script defer src="/js/view.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/router.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/db.js" type="text/javascript" charset="utf-8"></script>
+  <script defer src="/js/timespan.js" type="text/javascript" charset="utf-8"></script>
 
   <!--- templates -->
   <script defer src="/js/templates/month.js" type="text/javascript" charset="utf-8"></script>
@@ -97,6 +98,10 @@
   <a href="/advanced-settings/" data-l10n-id="advanced-settings" class="settings">
     Account Settings
   </a>
+
+  <button class="sync">
+    Sync
+  </button>
 
 </section>
 
