--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
   access to the details here
   -->
   <section id="months-day-view">
-    <h1 id="selected-day-title"></h1>
+    <h1 id="selected-day-title" class="day-title"></h1>
 
     <section id="event-list" class="day-events">
     </section>
