--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <script defer src="/js/router.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/db.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/timespan.js" type="text/javascript" charset="utf-8"></script>
+  <script defer src="/js/interval_tree.js" type="text/javascript" charset="utf-8"></script>
 
   <!--- templates -->
   <script defer src="/js/templates/month.js" type="text/javascript" charset="utf-8"></script>
