implement calendar colors & display toggle

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta http-equiv="pragma" content="no-cache">
   <title>Calendar</title>
-
   <link rel="stylesheet" type="text/css" href="/style/calendar.css">
   <link rel="stylesheet" type="text/css" href="/style/ui.css">
   <link rel="stylesheet" type="text/css" href="/style/events.css">
@@ -64,6 +63,7 @@
   <script defer src="/js/models/calendar.js" type="text/javascript" charset="utf-8"></script>
 
   <!--- views -->
+  <script defer src="/js/views/calendar_colors.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/month.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/month_child.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/months_day.js" type="text/javascript" charset="utf-8"></script>
