Update viasuals based on building blocks drawer

--- a/index.html
+++ b/index.html
@@ -95,14 +95,16 @@
 
   <ol class="calendars">
   </ol>
+  
+  <menu>
+    <a href="/advanced-settings/" data-l10n-id="advanced-settings" class="settings">
+      Account Settings
+    </a>
 
-  <a href="/advanced-settings/" data-l10n-id="advanced-settings" class="settings">
-    Account Settings
-  </a>
-
-  <button class="sync">
-    Sync
-  </button>
+    <button class="sync">
+      Sync
+    </button>
+  </menu>
 
 </section>
 
