fix: Calendar's days Localization ID is not consistent with locales

--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
   <section id="month-view">
     <!--- title row all the days this will be static -->
     <ol id="month-days" role="row">
-      <li data-l10n-id="day-sun" role="column">sun</li>
-      <li data-l10n-id="day-mon" role="column">mon</li>
-      <li data-l10n-id="day-tue" role="column">tue</li>
-      <li data-l10n-id="day-wed" role="column">wed</li>
-      <li data-l10n-id="day-thu" role="column">thu</li>
-      <li data-l10n-id="day-fri" role="column">fri</li>
-      <li data-l10n-id="day-sat" role="column">sat</li>
+      <li data-l10n-id="days-sun" role="column">sun</li>
+      <li data-l10n-id="days-mon" role="column">mon</li>
+      <li data-l10n-id="days-tue" role="column">tue</li>
+      <li data-l10n-id="days-wed" role="column">wed</li>
+      <li data-l10n-id="days-thu" role="column">thu</li>
+      <li data-l10n-id="days-fri" role="column">fri</li>
+      <li data-l10n-id="days-sat" role="column">sat</li>
     </ol>
     <!---
       month grid there may be multiple of these
