--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
   <!--- views -->
   <script defer src="/js/views/calendar_colors.js" type="text/javascript" charset="utf-8"></script>
+  <script defer src="/js/views/day_based.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/month.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/month_child.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/months_day.js" type="text/javascript" charset="utf-8"></script>
