update single event html

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       </h1>
     </header>
 
-    <fieldset>
+    <form>
       <ol>
         <li class="title">
           <input name="title" readonly data-l10n-id="event-title" placeholder="Title" />
@@ -324,7 +324,7 @@
         </li>
 
       </ol>
-    </fieldset>
+    </form>
   </section>
 </section>
 
