--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   <script defer src="/js/views/advanced_settings.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/create_account.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/modify_account.js" type="text/javascript" charset="utf-8"></script>
+  <script defer src="/js/views/modify_event.js" type="text/javascript" charset="utf-8"></script>
 
   <!-- workers / main / controller -->
   <script defer src="/js/worker/manager.js" type="text/javascript" charset="utf-8"></script>
