move majority of months day out to day_child

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <script defer src="/js/views/time_parent.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/month.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/month_child.js" type="text/javascript" charset="utf-8"></script>
+  <script defer src="/js/views/day_child.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/months_day.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/settings.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/advanced_settings.js" type="text/javascript" charset="utf-8"></script>
