--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   <script defer src="/js/views/month_child.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/day_child.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/months_day.js" type="text/javascript" charset="utf-8"></script>
+  <script defer src="/js/views/day.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/settings.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/advanced_settings.js" type="text/javascript" charset="utf-8"></script>
   <script defer src="/js/views/create_account.js" type="text/javascript" charset="utf-8"></script>
@@ -162,7 +163,6 @@
   </section>
 
   <section id="day-view">
-    [Day] Coming soon....
   </section>
 
   <section id="week-view">
