--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
   <link rel="stylesheet" type="text/css" href="/style/overlay.css">
   <link rel="stylesheet" type="text/css" href="/style/building_blocks.css" />
 
+
   <!-- localization -->
   <link rel="resource" type="application/l10n" href="/locales/locales.ini">
   <link rel="resource" type="application/l10n" href="/shared/locales/date.ini">
 
-  <!--- shared -->
+  <!--- shared styles -->
+  <link rel="stylesheet" type="text/css" href="/shared/style/buttons.css" />
+  <link rel="stylesheet" type="text/css" href="/shared/style/confirm.css" />
+
+  <!--- shared scripts -->
   <script src="/shared/js/l10n.js" type="text/javascript" charset="utf-8"></script>
   <script src="/shared/js/desktop.js" type="text/javascript" charset="utf-8"></script>
   <script src="/shared/js/gesture_detector.js" type="text/javascript" charset="utf-8"></script>
@@ -136,7 +141,7 @@
 
     <menu type="toolbar">
       <a href="/add/">
-        <span data-l10n-id="add-event" class="icon icon-add" >
+        <span data-l10n-id="new-event" class="icon icon-add" >
           Add Event
         </span>
       </a>
@@ -321,6 +326,24 @@
   </form>
   <div class="during-progress">
   </div>
+
+  <a data-l10n-id="remove-account-data" role="button" href="#remove-account-dialog" class="danger delete-record">
+    Remove Local Data
+  </a>
+
+  <form role="dialog" id="remove-account-dialog">
+    <section>
+      <h1 data-l10n-id="remove-account-dialog">>Remove Account</h1>
+      <p data-l10n-id="remove-account-dialog-details">
+        Removing this account will also remove your local copy of associated calendars and events.
+      </p>
+    </section>
+    <menu>
+      <button type="reset" onclick="window.back()" data-l10n-id="cancel">Cancel</button>
+      <button type="submit" class="delete-confirm" data-l10n-id="confirm">Confirm</button>
+    </menu>
+  </form>
+
 </section>
 
 
