Calendar - Delete Event #4188

--- a/index.html
+++ b/index.html
@@ -319,6 +319,10 @@
 
     </ol>
   </form>
+
+  <button data-l10n-id="event-delete" class="danger delete-record">
+    Delete Event
+  </button>
 </section>
 
 <section class="fullscreen-view skin-organic" id="modify-account-view" role="region">
