Bug 797550 localize today / month / week / day <- in view selector r=michable

--- a/index.html
+++ b/index.html
@@ -184,18 +184,18 @@
 
   <menu id="view-selector">
     <li class="today">
-      <a href="#today">Today</a>
+      <a data-l10n-id="show-today" href="#today">Today</a>
     </li>
     <li class="time-selection">
       <menu>
         <li class="month">
-          <a href="/month/">Month</a>
+          <a data-l10n-id="show-month-view" href="/month/">Month</a>
         </li>
         <li class="week">
-          <a href="/week/">Week</a>
+          <a data-l10n-id="show-week-view" href="/week/">Week</a>
         </li>
         <li class="day">
-          <a href="/day/">Day</a>
+          <a data-l10n-id="show-day-view" href="/day/">Day</a>
         </li>
       </menu>
     </li>
