--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
     </h1>
   </header>
 
+  <div id="progress-indicator">
+    <img id="throbber" src="/style/ui/progress.png">
+  </div>
+
+
   <section id="month-view">
   </section>
 
