Bug 809248 - [BB][confirm.css] Adapt new classnames from buttons.css

--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
       </p>
     </section>
     <menu>
-      <button type="reset" class="delete-cancel" data-l10n-id="cancel">Cancel</button>
-      <button type="submit" class="delete-confirm" data-l10n-id="confirm">Confirm</button>
+      <button class="delete-cancel" data-l10n-id="cancel">Cancel</button>
+      <button class="recommend delete-confirm" data-l10n-id="confirm">Confirm</button>
     </menu>
   </form>
 
