Bug 832269 - Clean up calendar styles

--- a/index.html
+++ b/index.html
@@ -305,28 +305,40 @@
       </li>
 
       <li class="start-date">
-        <input name="startDate" data-l10n-id="event-start-date" placeholder="Date" type="date" />
+        <span class="button icon icon-dialog">
+          <input name="startDate" data-l10n-id="event-start-date" placeholder="Date" type="date" />
+        </span>
       </li>
 
       <li class="start-time">
-        <input type="time" data-l10n-id="event-start-time" placeholder="Start Time" name="startTime" />
+        <span class="button icon icon-dialog">
+          <input type="time" data-l10n-id="event-start-time" placeholder="Start Time" name="startTime" />
+        </span>
       </li>
 
       <li class="end-date">
-        <input name="endDate" data-l10n-id="event-end-date" placeholder="Date" type="date" />
+        <span class="button icon icon-dialog">
+          <input name="endDate" data-l10n-id="event-end-date" placeholder="Date" type="date" />
+        </span>
       </li>
 
       <li class="end-time">
-        <input type="time" data-l10n-id="event-end-time" placeholder="End Time" name="endTime" />
+        <span class="button icon icon-dialog">
+          <input type="time" data-l10n-id="event-end-time" placeholder="End Time" name="endTime" />
+        </span>
       </li>
 
       <li class="current-calendar">
-        <input name="currentCalendar" />
+        <span class="button icon icon-dialog" aria-disabled="true">
+          <input name="currentCalendar" />
+        </span>
       </li>
 
       <li class="calendar-id">
-        <select name="calendarId">
-        </select>
+        <span class="button icon icon-dialog">
+          <select name="calendarId">
+          </select>
+        </span>
       </li>
 
       <li class="notes">
