Bug 835887 - [Calendar UX VD] "Remove account" overlay button should be red

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
     </section>
     <menu>
       <button class="delete-cancel" data-l10n-id="cancel">Cancel</button>
-      <button class="recommend delete-confirm" data-l10n-id="confirm">Confirm</button>
+      <button class="danger delete-confirm" data-l10n-id="confirm">Confirm</button>
     </menu>
   </form>
 
