--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <link rel="stylesheet" type="text/css" href="/style/calendar.css">
   <link rel="stylesheet" type="text/css" href="/style/ui.css">
   <link rel="stylesheet" type="text/css" href="/style/day_views.css">
-  <link rel="stylesheet" type="text/css" href="/style/building_blocks.css" />
-  <link rel="stylesheet" type="text/css" href="/shared/style/headers.css" />
+  <link rel="stylesheet" type="text/css" href="/style/building_blocks.css">
+  <link rel="stylesheet" type="text/css" href="/style/first_time_use.css">
+  <link rel="stylesheet" type="text/css" href="/shared/style/headers.css">
   <link rel="stylesheet" type="text/css" href="/shared/style_unstable/toolbars.css">
 
   <!-- localization -->
@@ -94,11 +95,11 @@
 <link rel="stylesheet" type="text/css" href="/style/forms.css">
 <link rel="stylesheet" type="text/css" href="/style/overlay.css">
 
-<link rel="stylesheet" type="text/css" href="/shared/style/buttons.css" />
-<link rel="stylesheet" type="text/css" href="/shared/style/confirm.css" />
-<link rel="stylesheet" type="text/css" href="/shared/style/switches.css" />
-<link rel="stylesheet" type="text/css" href="/shared/style/status.css" />
-<link rel="stylesheet" type="text/css" href="/shared/style_unstable/progress_activity.css" />
+<link rel="stylesheet" type="text/css" href="/shared/style/buttons.css">
+<link rel="stylesheet" type="text/css" href="/shared/style/confirm.css">
+<link rel="stylesheet" type="text/css" href="/shared/style/switches.css">
+<link rel="stylesheet" type="text/css" href="/shared/style/status.css">
+<link rel="stylesheet" type="text/css" href="/shared/style_unstable/progress_activity.css">
 
 <section id="errors" role="status">
   <p class="errors"></p>
@@ -159,6 +160,13 @@
     <div id="throbber"></div>
   </div>
 
+  <div id="hint-swipe-to-navigate" class="hint hide">
+    <div class="hint-swipe-text">
+      <strong data-l10n-id="hint-swipe-action">Swipe</strong>
+      <span data-l10n-id="hint-swipe-to-navigate"> to navigate between calendar dates.</span>
+    </div>
+    <div class="hint-swipe-image"></div>
+  </div>
 
   <section id="month-view">
   </section>
@@ -176,6 +184,7 @@
 
   <section id="day-view">
   </section>
+
   <div class="delay"><!--
   <section id="week-view">
   </section>
