Bug 886028 - Fix localizability of "All-day Events" label in Calendar
Misspelled data-l10n-id

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       </li>
       <li>
         <label id="default-allday-alarm">
-          <span data-l10n-id="all-day-events">All-day Events</span>
+          <span data-l10n-id="allday-events">All-day Events</span>
           <span class="button icon icon-dialog"></span>
         </label>
       </li>
