Bug 885925 - Header in the calendar sidebar is different from the header in the building block

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <section id="errors" role="status">
   <p class="errors"></p>
 </section>
-<nav class="skin-organic" id="settings" role="region">
+<section class="skin-organic" id="settings" role="region">
 
   <header>
     <menu type="toolbar">
@@ -134,7 +134,7 @@
       </li>
     </ul>
   </div>
-</nav>
+</section>
 --></div>
 
 <section id="time-views" role="region">
