[880866][Calendar]Adding new strings for localization

--- a/index.html
+++ b/index.html
@@ -429,14 +429,16 @@
       </li>
 
       <li class="start-date">
-        From: <span class="content"></span>
+        <span data-l10n-id="from-time">From: </span>
+        <span class="content"></span>
         <span class="start-time">
           <span class="content"></span>
         </span>
       </li>
 
       <li class="end-date">
-        To: <span class="content"></span>
+        <span data-l10n-id="to-time">To: </span>
+        <span class="content"></span>
         <span class="end-time">
           <span class="content"></span>
         </span>
