Bug 951084 - Visual refresh for today button.

--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
   <section id="week-view" role="tabpanel" aria-labelledby="week"></section>
 
   <ul id="view-selector" role="tablist" class="bb-tablist">
-    <li class="today" role="presentation"><a role="tab" aria-selected="false" aria-controls="months-day-view" id="today" data-l10n-id="show-today" href="#today">Today</a></li>
+    <li class="today" role="presentation">
+      <a id="today" href="#today"><span class="icon-today"></span></a>
+    </li>
     <li class="month" role="presentation"><a role="tab" aria-selected="true" aria-controls="month-view" id="month" data-l10n-id="show-month-view" href="/month/">Month</a></li>
     <li class="week" role="presentation"><a role="tab" aria-selected="false" aria-controls="week-view" id="week" data-l10n-id="show-week-view" href="/week/">Week</a></li>
     <li class="day" role="presentation"><a role="tab" aria-selected="false" aria-controls="day-view" id="day" data-l10n-id="show-day-view" href="/day/">Day</a></li>
