Bug 967592 - [BB][Calendar] Input areas are not connected to Building Blocks

--- a/elements/modify_event.html
+++ b/elements/modify_event.html
@@ -20,11 +20,11 @@
     <form>
       <ol>
         <li class="title">
-          <input name="title" data-l10n-id="event-title" x-inputmode="latin-prose" placeholder="Title" />
+          <input type="text" name="title" data-l10n-id="event-title" x-inputmode="latin-prose" placeholder="Title" />
         </li>
 
         <li class="location">
-          <input name="location" data-l10n-id="event-location" x-inputmode="latin-prose" placeholder="Where?" />
+          <input type="text" name="location" data-l10n-id="event-location" x-inputmode="latin-prose" placeholder="Where?" />
         </li>
 
         <li class="allday">
@@ -90,7 +90,7 @@
         </li>
 
         <li class="notes">
-          <textarea class="fieldbox" name="description" data-l10n-id="event-description" x-inputmode="latin-prose" placeholder="Notes"></textarea>
+          <textarea name="description" data-l10n-id="event-description" x-inputmode="latin-prose" placeholder="Notes"></textarea>
         </li>
 
         <li class="delete">
