--- a/elements/lazy_styles.html
+++ b/elements/lazy_styles.html
@@ -7,5 +7,6 @@
 	<link rel="stylesheet" type="text/css" href="/shared/style/switches.css">
 	<link rel="stylesheet" type="text/css" href="/shared/style/status.css">
 	<link rel="stylesheet" type="text/css" href="/shared/style/progress_activity.css">
+	<link rel="stylesheet" type="text/css" href="/shared/style_unstable/input_areas.css">
   </template>
 </element>
