--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="/style/calendar.css">
   <link rel="stylesheet" type="text/css" href="/style/ui.css">
   <link rel="stylesheet" type="text/css" href="/style/day_views.css">
+  <link rel="stylesheet" type="text/css" href="/style/month.css">
   <link rel="stylesheet" type="text/css" href="/style/building_blocks.css">
   <link rel="stylesheet" type="text/css" href="/style/first_time_use.css">
 
@@ -66,6 +67,7 @@
   <script defer src="/js/views/day_based.js"></script>
   <script defer src="/js/views/month.js"></script>
   <script defer src="/js/views/day_child.js"></script>
+  <script defer src="/js/templates/months_day.js"></script>
   <script defer src="/js/views/months_day.js"></script>
 
   <!--- store -->
@@ -148,6 +150,8 @@
   access to the details here
   -->
   <section id="months-day-view" role="tabpanel" aria-labelledby="today">
+    <div id="event-list-date"></div>
+    <div id="empty-message" data-l10n-id="no-events" class="active">No Events</div>
     <section id="event-list" class="day-events">
     </section>
   </section>
@@ -164,7 +168,6 @@
     <li class="week" role="presentation"><a role="tab" aria-selected="false" aria-controls="week-view" id="week" data-l10n-id="show-week-view" href="/week/">Week</a></li>
     <li class="day" role="presentation"><a role="tab" aria-selected="false" aria-controls="day-view" id="day" data-l10n-id="show-day-view" href="/day/">Day</a></li>
   </ul>
-
 </section>
 
 <section is="create-account" class="fullscreen-view skin-organic" id="create-account-view" role="region"></section>
