--- a/elements/modify_event.html
+++ b/elements/modify_event.html
@@ -36,36 +36,28 @@
 
         <li class="start-date">
           <span class="button icon icon-dialog">
-            <label>
-              <input name="startDate" data-l10n-id="event-start-date" placeholder="Date" type="date" class="hidden-input" />
-            </label>
+            <input name="startDate" data-l10n-id="event-start-date" placeholder="Date" type="date" class="hidden-input" />
             <span class="datetime" id="start-date-locale"></span>
           </span>
         </li>
 
         <li class="start-time">
           <span class="button icon icon-dialog">
-            <label>
-              <input type="time" data-l10n-id="event-start-time" placeholder="Start Time" name="startTime" class="hidden-input" />
-            </label>
+            <input type="time" data-l10n-id="event-start-time" placeholder="Start Time" name="startTime" class="hidden-input" />
             <span class="datetime" id="start-time-locale"></span>
           </span>
         </li>
 
         <li class="end-date">
           <span class="button icon icon-dialog">
-            <label>
-              <input name="endDate" data-l10n-id="event-end-date" placeholder="Date" type="date" class="hidden-input" />
-            </label>
+            <input name="endDate" data-l10n-id="event-end-date" placeholder="Date" type="date" class="hidden-input" />
             <span class="datetime" id="end-date-locale"></span>
           </span>
         </li>
 
         <li class="end-time">
           <span class="button icon icon-dialog">
-            <label>
-              <input type="time" data-l10n-id="event-end-time" placeholder="End Time" name="endTime" class="hidden-input" />
-            </label>
+            <input type="time" data-l10n-id="event-end-time" placeholder="End Time" name="endTime" class="hidden-input" />
             <span class="datetime" id="end-time-locale"></span>
           </span>
         </li>
@@ -93,13 +85,12 @@
           <textarea name="description" data-l10n-id="event-description" x-inputmode="latin-prose" placeholder="Notes"></textarea>
         </li>
 
-        <li class="delete">
-          <a role="button" data-l10n-id="event-delete" class="danger delete-record">
-            Delete Event
-          </a>
-        </li>
-
       </ol>
+      <div class="delete">
+        <a role="button" data-l10n-id="event-delete" class="danger delete-record">
+          Delete Event
+        </a>
+      </div>
 
       <section role="status">
         <p class="errors"></p>
