--- a/elements/lazy_styles.html
+++ b/elements/lazy_styles.html
@@ -2,11 +2,11 @@
   <template>
 	<link rel="stylesheet" type="text/css" href="/style/forms.css">
 	<link rel="stylesheet" type="text/css" href="/style/overlay.css">
-	<link rel="stylesheet" type="text/css" href="/shared/style_unstable/buttons.css">
+	<link rel="stylesheet" type="text/css" href="/shared/style/buttons.css">
 	<link rel="stylesheet" type="text/css" href="/shared/style/confirm.css">
 	<link rel="stylesheet" type="text/css" href="/shared/style/switches.css">
 	<link rel="stylesheet" type="text/css" href="/shared/style/status.css">
 	<link rel="stylesheet" type="text/css" href="/shared/style/progress_activity.css">
-	<link rel="stylesheet" type="text/css" href="/shared/style_unstable/input_areas.css">
+	<link rel="stylesheet" type="text/css" href="/shared/style/input_areas.css">
   </template>
 </element>
