Bug 1007519 - Perma failing test, toggle calendar

--- a/elements/modify_event.html
+++ b/elements/modify_event.html
@@ -69,7 +69,7 @@
 
         <li class="calendar-id">
           <span class="button icon icon-dialog">
-            <select name="calendarId">
+            <select name="calendarId" class="loading">
             </select>
           </span>
         </li>
