--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script defer src="/shared/js/accessibility_helper.js"></script>
   <script defer src="/shared/js/gesture_detector.js"></script>
   <script defer src="/shared/js/lazy_loader.js"></script>
+  <script defer src="/shared/js/font_size_utils.js"></script>
   <script defer src="/shared/js/l10n_date.js"></script>
   <script defer src="/shared/js/notification_helper.js"></script>
   <!-- Lazily Loaded
