Bug 1052960 - [Calendar] Day View: update it to use same logic as the 5-day week view

--- a/elements/multi_day.html
+++ b/elements/multi_day.html
@@ -1,16 +1,16 @@
 <element name="multi-day" extends="section">
   <template>
-    <div class="sticky">
-      <span class="all-day gaia-icon icon-calendar-allday"></span>
-      <div class="alldays-wrapper">
-        <section class="alldays"></section>
+    <div class="md__sticky">
+      <span class="md__all-day gaia-icon icon-calendar-allday"></span>
+      <div class="md__alldays-wrapper">
+        <section class="md__alldays"></section>
       </div>
     </div>
-    <div class="main">
-      <div class="main-content">
-        <ol class="sidebar"></ol>
-        <div class="days-wrapper">
-          <section class="days"></section>
+    <div class="md__main">
+      <div class="md__main-content">
+        <ol class="md__sidebar"></ol>
+        <div class="md__days-wrapper">
+          <section class="md__days"></section>
         </div>
       </div>
     </div>
