--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     </section>
   </section>
 
-  <section id="day-view" role="tabpanel" aria-labelledby="day"></section>
+  <section is="multi-day" id="day-view" class="multi-day day-view" role="tabpanel" aria-labelledby="day"></section>
 
-  <section is="multi-day" id="week-view" class="multi-day" role="tabpanel" aria-labelledby="week"></section>
+  <section is="multi-day" id="week-view" class="multi-day week-view" role="tabpanel" aria-labelledby="week"></section>
 
   <ul id="view-selector" role="tablist" class="bb-tablist">
     <li class="today" role="presentation">
