Bug 1074224 - removing all [role="button"] CSS rules from Calendar app.

--- a/elements/modify_account.html
+++ b/elements/modify_account.html
@@ -35,7 +35,7 @@
             <button data-l10n-id="modify-account-sign-in" class="force-oauth2"></button>
           </li>
           <li>
-            <a data-l10n-id="remove-account-data" role="button" href="#remove-account-dialog" class="danger delete-record">
+            <a data-l10n-id="remove-account-data" role="button" href="#remove-account-dialog" class="danger delete-record bb-button">
               Remove Local Data
             </a>
           </li>
