--- a/elements/modify_event.html
+++ b/elements/modify_event.html
@@ -79,7 +79,7 @@
 
       </ol>
       <div class="delete">
-        <a role="button" data-l10n-id="event-delete" class="danger delete-record">
+        <a role="button" data-l10n-id="event-delete" class="danger delete-record bb-button">
           Delete Event
         </a>
       </div>
