Bug 1084551 - made calendar list accessible in calendar settings. r=mmedeiros

--- a/elements/settings.html
+++ b/elements/settings.html
@@ -8,7 +8,7 @@
 
     <div class="settings-drawer-container">
       <div class="settings-drawer">
-        <ol class="calendars">
+        <ol class="calendars" role="listbox" aria-multiselectable="true" data-l10n-id="calendars">
         </ol>
 
         <div role="toolbar">
